# NetoHomeworks

./: .gitignore
lesson-1/homework-1-1/: homework-1-1.cpp  homework-1-1.sln  homework-1-1.vcxproj  out.txt
lesson-10/homework-10-1/: source.cpp
lesson-10/homework-10-2/: CMakeLists.txt  diamond.h  figure.cpp  parallelogram.h  quadrangle.cpp  right_triangle.cpp
lesson-11/GreaterStaticLibrary/: GreaterStaticLibrary.sln
lesson-11/homework-11-3/: CMakeLists.txt  GreaterLeaver.cpp  leaver.h
lesson-11/homework-11-5/: CMakeLists.txt  equilateral_triangle.h  figure.h  quadrangle.h  rectangle.h  source.cpp  triangle.h
lesson-2/homework-2-1/: homework-2-1.cpp  homework-2-1.sln  homework-2-1.vcxproj
lesson-2/homework-2-2/: homework-2-2.cpp  homework-2-2.sln  homework-2-2.vcxproj
lesson-2/homework-2-3/: homework-2-3.cpp  homework-2-3.sln  homework-2-3.vcxproj
lesson-3/homework-3-1/: homework-3-1.cpp  homework-3-1.sln  homework-3-1.vcxproj
lesson-3/homework-3-2/: homework-3-2.cpp  homework-3-2.sln  homework-3-2.vcxproj
lesson-4/homework-4-1/: homework-4-1.cpp  homework-4-1.sln  homework-4-1.vcxproj  in_2.txt  out_2.txt
lesson-4/homework-4-2/: homework-4-2.cpp  homework-4-2.sln  homework-4-2.vcxproj  in_3.txt  out_2.txt  out_3.txt
lesson-5/homework-5-1/: homework-5-1.cpp  homework-5-1.sln  homework-5-1.vcxproj
lesson-5/homework-5-2/: homework-5-2.cpp  homework-5-2.sln  homework-5-2.vcxproj
lesson-5/homework-5-3/: homework-5-3.cpp  homework-5-3.sln  homework-5-3.vcxproj
lesson-6/homework-6-1/: calculator.cpp  calculator.h  homework-6-1.cpp  homework-6-1.sln  homework-6-1.vcxproj
lesson-6/homework-6-1-test/: calculator.cpp  homework-6-1.cpp  homework-6-1.sln  homework-6-1.vcxproj
lesson-6/homework-6-2/: counter.cpp  counter.h  homework-6-2.cpp  homework-6-2.sln  homework-6-2.vcxproj  service_functions.cpp  service_functions.h
lesson-6/homework-6-3/: diamond.cpp  equilateral_triangle.cpp  homework-5-2-test.cpp  homework-6-3.cpp  homework-6-3.sln  homework-6-3.vcxproj  isosceles_triangle.h  parallelogram.cpp  square.cpp  square.h
lesson-7/homework-7-1/: homework-7-1.cpp  homework-7-1.sln  homework-7-1.vcxproj
lesson-7/homework-7-2/: homework-7-2.cpp  homework-7-2.sln  homework-7-2.vcxproj
lesson-8/homework-8-1/: homework-8-1.cpp  homework-8-1.sln  homework-8-1.vcxproj
lesson-8/homework-8-2/: FiguresException.cpp  FiguresException.h  figure.h  homework-8-2.cpp  homework-8-2.sln  homework-8-2.vcxproj  isosceles_triangle.cpp  quadrangle.cpp  quadrangle.h  right_triangle.cpp  right_triangle.h  triangle.cpp  triangle.h
lesson-9/homework-9-1/: FractionException.cpp  FractionException.h  (+5 more)
term-project/: cppm-diplom.htm
term-project/term-project/term-project/: CMakeLists.txt  racing.cpp  racing.h  racing_exception.cpp  racing_exceptions.h  source.cpp  source_required_elements.cpp  source_required_elements.h  term-project.vcxproj  transport.cpp  transport.h  transport_air.cpp  transport_air.h  transport_crosscountry_boots.cpp  transport_eagle.cpp  transport_eagle.h  transport_exception.cpp  transport_exceptions.cpp  transport_high_speed_camel.h  transport_land.cpp  transport_land.h
term-project/term-project/term-project/racing-lib/: CMakeLists.txt  Transport_centaur.cpp  racing.cpp  racing_exception.cpp  transport.cpp  transport_air.cpp  transport_broom.cpp  transport_camel.cpp  transport_crosscountry_boots.cpp  transport_eagle.cpp  transport_exception.cpp  transport_high_speed_camel.cpp  transport_land.cpp  transport_magic_carpet.cpp
term-project/term-project/term-project/racing-lib/include/: racing.h  racing_exception.h  transport.h  transport_air.h  transport_broom.h  transport_camel.h  transport_crosscountry_boots.h  transport_exception.h  transport_land.h  transport_magic_carpet.h
(+49 files in other folders)
