cmake_minimum_required(VERSION 3.22.0)
project(cmake_figures_project)
add_executable(cmake_figures_project figure.h  figure.cpp triangle.h  triangle.cpp quadrangle.h  quadrangle.cpp isosceles_triangle.h  isosceles_triangle.cpp equilateral_triangle.h  equilateral_triangle.cpp right_triangle.h  right_triangle.cpp parallelogram.h  parallelogram.cpp diamond.h  diamond.cpp rectangle.h  rectangle.cpp  square.h  square.cpp source.cpp)



